[gd_scene load_steps=4 format=2]

[ext_resource path="res://Lobby/LobbyUser.gd" type="Script" id=1]
[ext_resource path="res://Lobby/X.png" type="Texture" id=2]
[ext_resource path="res://Lobby/X_pressed.png" type="Texture" id=3]

[node name="LobbyUser" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1120.0
margin_bottom = -560.0
rect_min_size = Vector2( 160, 160 )
rect_scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_right = 64.0
margin_bottom = 128.0
expand = true

[node name="LeaveButton" type="TextureButton" parent="TextureRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Name" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -31.0
text = "Client"
align = 1
valign = 1

[connection signal="button_down" from="TextureRect/LeaveButton" to="." method="_on_LeaveButton_button_down"]
